[Feature] add for new